--- a/ui/src/containers/Dashboard/Dashboard.module.scss
+++ b/ui/src/containers/Dashboard/Dashboard.module.scss
@@ -1,15 +1,28 @@
 .container {
-  .left {
-    position: absolute;
-    margin-right: 20px;
-    right: 310px;
-    left: 180px;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 20px 0 0 0;
+  padding: 0;
 
-  .right {
-    position: absolute;
-    right: 30px;
-    width: 280px;
-    background-color: #fff;
+  li {
+    width: 200px;
+    height: 200px;
+    margin: 0 20px 20px 0;
+    padding: 15px;
+
+    &:last-child {
+      margin: 0;
+    }
+
+    &.center {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      svg {
+        fill: #eaeaea;
+      }
+    }
   }
 }
