ui: rearrange server settings

--- a/ui/src/containers/Services/Setting/Editor.module.scss
+++ b/ui/src/containers/Services/Setting/Editor.module.scss
@@ -8,4 +8,10 @@
     margin: 10px 0;
   }
 
+  h3 {
+    margin-top: 30px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e8e8e8;
+  }
+
 }
