ui: fix unique key warning

--- a/ui/src/containers/App/App.module.scss
+++ b/ui/src/containers/App/App.module.scss
@@ -66,6 +66,7 @@
       padding: 0;
 
       .divider {
+        float: right;
         width: 1px;
         height: 15px;
         margin: 3px 10px 0;
